feat: operate outside of root hostname

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,8 +1,8 @@
 {{#> layout }}
   {{#each entries}}
     <section class="box">
-      <a href="/entries/{{name}}.html">
-        <p><small><em>{{created_at}}</em></small></p>
+      <a href="{{name}}.html">
+        <p><small><em>{{createdAt}}</em></small></p>
         <h1 class="title">{{title}}</h1>
         <p class="subtitle">{{description}}</p>
       </a>
