--- a/templates/layout.hbs
+++ b/templates/layout.hbs
@@ -6,7 +6,7 @@
 
   <title>{{config.title}}</title>
 
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section class="section">
@@ -14,11 +14,11 @@
       <div class="columns">
         <div class="column is-narrow">
           <p class="content">
-            <p class="title"><a href="/">{{config.title}}</a></p>
+            <p class="title"><a href="index.html">{{config.title}}</a></p>
             <p class="subtitle">{{config.subtitle}}</p>
           </p>
           <aside class="menu">
-            <p class="menu-label">{{config.links_title}}</p>
+            <p class="menu-label">{{config.linksTitle}}</p>
             <ul>
               {{#each config.links}}
               <li>
