feat: big ridiculous floppy

--- a/templates/layout.hbs
+++ b/templates/layout.hbs
@@ -13,6 +13,9 @@
     <div class="container">
       <div class="columns">
         <div class="column is-narrow">
+          <figure class="image" alt="A picture of me.">
+            <img src="static/self.jpg">
+          </figure>
           <p class="content">
             <p class="title"><a href="index.html">{{config.title}}</a></p>
             <p class="subtitle">{{config.subtitle}}</p>
